manifests/apps/components/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service
        app.kubernetes.io/part-of: dialogporten
    spec:
      serviceAccountName: service
      containers:
        - name: service
          image: ghcr.io/altinn/dialogporten-service:set-by-ci
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    app.kubernetes.io/name: service
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dialogporten
spec:
  routes:
    - match: Host(`placeholder.invalid`) && PathPrefix(`/dialogporten/service`)
      priority: 5
      middlewares:
        - name: service-ip-allowlist
      services:
        - name: service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: service-ip-allowlist
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dialogporten
spec:
  ipAllowList:
    sourceRange:
      - 0.0.0.0/32
