manifests/apps/components/web-api-eu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-eu
  labels:
    app.kubernetes.io/name: web-api-eu
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-api-eu
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-api-eu
        app.kubernetes.io/part-of: dialogporten
    spec:
      serviceAccountName: web-api-eu
      containers:
        - name: web-api-eu
          image: ghcr.io/altinn/dialogporten-webapi:set-by-ci
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-eu
  labels:
    app.kubernetes.io/name: web-api-eu
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    app.kubernetes.io/name: web-api-eu
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-api-eu
  labels:
    app.kubernetes.io/name: web-api-eu
    app.kubernetes.io/part-of: dialogporten
spec:
  routes:
    - match: Host(`placeholder.invalid`) && PathPrefix(`/dialogporten/enduser`)
      priority: 10
      middlewares:
        - name: web-api-eu-ip-allowlist
      services:
        - name: web-api-eu
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-api-eu-ip-allowlist
  labels:
    app.kubernetes.io/name: web-api-eu
    app.kubernetes.io/part-of: dialogporten
spec:
  ipAllowList:
    sourceRange:
      - 0.0.0.0/32
